devops/dev2/application/02-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/cziesman/widget-app'
    deployment.kubernetes.io/revision: '1'
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"widget-app:latest","namespace":"widget-app"},"fieldPath":"spec.template.spec.containers[?(@.name==\"widget-app\")].image","paused":"false"}]'
  name: widget-app
  namespace: widget-app
  labels:
    app: widget-app
    app.kubernetes.io/component: widget-app
    app.kubernetes.io/instance: widget-app
    app.kubernetes.io/name: widget-app
    app.kubernetes.io/part-of: widget-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: widget-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: widget-app
        deployment: widget-app
    spec:
      containers:
        - name: widget-app
          image: 'image-registry.openshift-image-registry.svc:5000/widget-app/widget-app:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
