devops/dev2/application/03-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: widget-app
  namespace: widget-app
  labels:
    app: widget-app
    app.kubernetes.io/component: widget-app
    app.kubernetes.io/instance: widget-app
    app.kubernetes.io/name: widget-app
    app.kubernetes.io/part-of: widget-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/cziesman/widget-app'
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: widget-app
    deployment: widget-app
