devops/dev2/application/04-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: widget-app
  namespace: widget-app
  labels:
    app: widget-app
    app.kubernetes.io/component: widget-app
    app.kubernetes.io/instance: widget-app
    app.kubernetes.io/name: widget-app
    app.kubernetes.io/part-of: widget-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/cziesman/widget-app'
spec:
  to:
    kind: Service
    name: widget-app
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
